--- a/src/main/resources/Form/Module2/PurchaseOrder.fxml
+++ b/src/main/resources/Form/Module2/PurchaseOrder.fxml
@@ -24,54 +24,59 @@
       
         <columnConstraints>
           <ColumnConstraints />
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="83.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="250.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="117.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="94.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="201.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="76.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="83.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="70.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="42.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="42.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="141.0" minHeight="10.0" prefHeight="107.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="39.0" valignment="TOP" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="139.0" minHeight="0.0" prefHeight="49.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="212.0" minHeight="0.0" prefHeight="40.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="36.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="54.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="38.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="127.0" valignment="TOP" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="77.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="38.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="35.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="141.0" minHeight="10.0" prefHeight="116.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="112.0" minHeight="1.0" prefHeight="23.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="19.0" valignment="TOP" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="139.0" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="212.0" minHeight="0.0" prefHeight="23.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="45.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="33.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="93.0" valignment="TOP" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label alignment="TOP_LEFT" text="Product: " GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="productChoiceBox" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Label fx:id="quantityLabel" text="Quantity" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="quantityTextField" maxWidth="162.0" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Label text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-            <Label fx:id="nameLabel" disable="true" text="Name: " GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <Label fx:id="phoneLabel" disable="true" text="Phone: " GridPane.columnIndex="1" GridPane.rowIndex="10" />
-            <CheckBox fx:id="paidCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="161.0" text="Paid" GridPane.columnIndex="2" GridPane.rowIndex="11" />
-            <Button fx:id="okBtn" mnemonicParsing="false" onAction="#generateBtn" prefHeight="36.0" prefWidth="172.0" text="GENERATE" GridPane.columnIndex="2" GridPane.rowIndex="12" />
-            <TextField fx:id="customerNameField" disable="true" maxWidth="-Infinity" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
-            <TextField fx:id="phoneTextField" disable="true" maxWidth="-Infinity" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+            <Label fx:id="customerLabel" text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" onMouseClicked="#checkSelected" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <Label fx:id="nameLabel" disable="true" text="Name: " GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Label fx:id="phoneLabel" disable="true" text="Phone: " GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <CheckBox fx:id="paidCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="161.0" text="Paid" GridPane.columnIndex="2" GridPane.rowIndex="12" />
+            <Button fx:id="okBtn" mnemonicParsing="false" onAction="#generateBtn" prefHeight="36.0" prefWidth="172.0" text="GENERATE" GridPane.columnIndex="2" GridPane.rowIndex="13" />
+            <TextField fx:id="customerNameField" disable="true" maxWidth="-Infinity" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+            <TextField fx:id="phoneTextField" disable="true" maxWidth="-Infinity" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="11" />
             <Button fx:id="addToItemsBtn" mnemonicParsing="false" onAction="#addToItems" text="Add to Items" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <Label text="Items: " GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <ChoiceBox fx:id="salesmanChoiceBox" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" />
             <Label text="Salesman: " GridPane.columnIndex="1" />
             <Label text="Lack: " GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <TableView fx:id="itemsTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="5">
               <columns>
-                <TableColumn prefWidth="51.0" text="QTY." />
-                <TableColumn prefWidth="114.0" text="NAME" />
-                  <TableColumn prefWidth="84.0" text="PRICE" />
-                  <TableColumn prefWidth="100.0" text="TOTAL" />
+                <TableColumn fx:id="qtyCol" prefWidth="51.0" text="QTY." />
+                <TableColumn fx:id="nameCol" prefWidth="114.0" text="NAME" />
+                  <TableColumn fx:id="priceCol" prefWidth="84.0" text="PRICE" />
+                  <TableColumn fx:id="totalCol" prefWidth="100.0" text="TOTAL" />
               </columns>
             </TableView>
-            <Label text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <Label fx:id="totalLabel" text="Total: " GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <Label fx:id="discountLabel" text="Discount: " GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <Label fx:id="sumAmount" text="0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <Label fx:id="discountAmount" text="0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </children>
