--- a/src/main/resources/Form/SalesmanModule/CustomerSalerList.fxml
+++ b/src/main/resources/Form/SalesmanModule/CustomerSalerList.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CustomerSalerListController">
     <top>
         <HBox prefHeight="48.0" prefWidth="779.0" BorderPane.alignment="CENTER">
@@ -60,15 +60,6 @@
                             </image>
                         </ImageView>
                     </graphic></Button>
-                <Button contentDisplay="TOP" layoutX="219.0" layoutY="10.0" mnemonicParsing="false" onAction="#openCustomerList" prefHeight="56.0" prefWidth="134.0" text="Show Group Product">
-                    <graphic>
-                        <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../Photo/GRoup.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
             </children>
         </HBox>
     </top>
@@ -86,7 +77,7 @@
             </rowConstraints>
             <children>
                 <Label GridPane.rowIndex="1" />
-                <Label text="Phone number:" GridPane.rowIndex="2">
+                <Label text="Customer Phone:" GridPane.rowIndex="2">
                <font>
                   <Font size="16.0" />
                </font></Label>
@@ -94,7 +85,7 @@
                <font>
                   <Font size="16.0" />
                </font></Label>
-                <Label text="Seller Name:" GridPane.rowIndex="1">
+                <Label text="Customer Name:" GridPane.rowIndex="1">
                <font>
                   <Font size="16.0" />
                </font></Label>
@@ -106,7 +97,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="tfID" GridPane.columnIndex="1" />
+            <TextField fx:id="tfID" editable="false" GridPane.columnIndex="1" />
             </children>
         </GridPane>
     </center>
