--- a/src/main/resources/Form/StatisticModule/GroupStatisticDetail.fxml
+++ b/src/main/resources/Form/StatisticModule/GroupStatisticDetail.fxml
@@ -5,57 +5,59 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="1030.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StatisticModule.GroupStatisticDetailController">
     <top>
         <BorderPane prefHeight="114.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-            <bottom>
+         <top>
                 <HBox prefHeight="46.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label text="Start day:">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </Label>
-                        <DatePicker fx:id="dpStartDay">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </DatePicker>
-                        <Label text="End day:">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </Label>
-                        <DatePicker fx:id="dpEndDay">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </DatePicker>
-                        <Button mnemonicParsing="false" onAction="#searchByDay" text="Search By Day">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#showAll" text="Show All">
-                            <HBox.margin>
-                                <Insets left="20.0" />
-                            </HBox.margin>
-                        </Button>
-                    </children>
+               <children>
+                  <Label fx:id="lbDateInfo" text="Label">
+                     <HBox.margin>
+                        <Insets left="50.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
                 </HBox>
-            </bottom>
+         </top>
+         <bottom>
+            <HBox prefHeight="51.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="lbGroupName" />
+                  <Label text="Floor Limit:">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="tfFloorLimit">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onAction="#filter" text="Filter">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#showAll" text="Reset">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </bottom>
         </BorderPane>
     </top>
     <center>
-        <TableView fx:id="tbGroupProductList" prefHeight="358.0" prefWidth="1025.0" BorderPane.alignment="CENTER">
+        <TableView fx:id="tbProductList" prefHeight="358.0" prefWidth="1025.0" BorderPane.alignment="CENTER">
             <columns>
                 <TableColumn fx:id="clProductID" prefWidth="75.0" text="Product ID" />
                 <TableColumn fx:id="clProductName" prefWidth="255.0" text="Product Name" />
