--- a/src/main/resources/Form/SalesmanModule/SalesManList.fxml
+++ b/src/main/resources/Form/SalesmanModule/SalesManList.fxml
@@ -58,7 +58,7 @@
    <bottom>
       <BorderPane prefHeight="388.0" prefWidth="779.0" BorderPane.alignment="CENTER">
          <bottom>
-            <Pagination prefHeight="41.0" prefWidth="779.0" BorderPane.alignment="CENTER" />
+            <Pagination fx:id="pgSalesmanList" prefHeight="41.0" prefWidth="779.0" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
             <TableView fx:id="tbSalemanList" prefHeight="340.0" prefWidth="779.0" BorderPane.alignment="CENTER">
