--- a/src/main/resources/Form/SalesmanModule/CreateOrder.fxml
+++ b/src/main/resources/Form/SalesmanModule/CreateOrder.fxml
@@ -78,12 +78,12 @@
                         </Spinner>
                      </children>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#addProductToOrderList" text="Add Product" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                  <Button mnemonicParsing="false" onAction="#addProductToOrderList" prefHeight="25.0" prefWidth="87.0" text="Add Product" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <GridPane.margin>
-                        <Insets left="50.0" />
+                        <Insets left="30.0" />
                      </GridPane.margin>
                   </Button>
-                  <TextField fx:id="tfBarcode" onInputMethodTextChanged="#testBarcode" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                  <TextField fx:id="tfBarcode" onInputMethodTextChanged="#testBarcode" promptText="Barcode" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="150.0" />
                      </GridPane.margin>
@@ -131,16 +131,19 @@
    <right>
       <AnchorPane prefHeight="387.0" prefWidth="168.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="39.0" layoutY="320.0" mnemonicParsing="false" onAction="#saveOrder" prefHeight="47.0" prefWidth="59.0" text="Save" />
-            <Button layoutX="118.0" layoutY="342.0" mnemonicParsing="false" onAction="#clearInfo" text="clear" />
-            <Label layoutX="11.0" layoutY="76.0" text="Total Cost:" />
-            <TextField fx:id="tfTotalCost" editable="false" layoutX="10.0" layoutY="93.0" />
-            <Label layoutX="14.0" layoutY="134.0" text="Paid:" />
-            <TextField fx:id="tfPaid" layoutX="10.0" layoutY="151.0" />
-            <Label layoutX="11.0" layoutY="193.0" text="Change:" />
-            <TextField fx:id="tfChange" layoutX="10.0" layoutY="210.0" />
+            <Button layoutX="30.0" layoutY="320.0" mnemonicParsing="false" onAction="#saveOrder" prefHeight="47.0" prefWidth="120.0" style="-fx-background-color: green;" text="CREATE ORDER" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font></Button>
+            <Label layoutX="12.0" layoutY="119.0" text="Total Cost:" />
+            <TextField fx:id="tfTotalCost" editable="false" layoutX="10.0" layoutY="136.0" />
+            <Label layoutX="14.0" layoutY="161.0" text="Paid:" />
+            <TextField fx:id="tfPaid" layoutX="10.0" layoutY="185.0" />
+            <Label layoutX="11.0" layoutY="210.0" text="Change:" />
+            <TextField fx:id="tfChange" layoutX="10.0" layoutY="233.0" />
             <Label layoutX="12.0" layoutY="14.0" text="Voucher Code:" />
             <TextField fx:id="tfVoucherCode" layoutX="10.0" layoutY="31.0" onInputMethodTextChanged="#searchVoucher" />
+            <Label fx:id="lbVoucherInfo" layoutX="13.0" layoutY="67.0" />
          </children>
       </AnchorPane>
    </right>
