--- a/src/main/resources/Form/MainForm/DashBoard.fxml
+++ b/src/main/resources/Form/MainForm/DashBoard.fxml
@@ -3,12 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -22,33 +20,13 @@
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
-            <TabPane fx:id="tpMain" prefHeight="200.0" prefWidth="200.0" styleClass="tpMain" stylesheets="@../style.css" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER" />
+            <TabPane fx:id="tpMain" prefHeight="200.0" prefWidth="200.0" styleClass="tpMain" stylesheets="@../style.css" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="5.0" />
+               </BorderPane.margin></TabPane>
          </center>
          <top>
             <BorderPane prefHeight="91.0" prefWidth="828.0" BorderPane.alignment="CENTER">
-               <top>
-                  <MenuBar style="-fx-background-color: #00BFFF;" BorderPane.alignment="CENTER">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="File">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Close" />
-                              <MenuItem mnemonicParsing="false" onAction="#exitProgram" text="Exit" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Delete" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Check for update" />
-                              <MenuItem fx:id="mnitAbout" mnemonicParsing="false" onAction="#openAbout" text="About" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
-               </top>
                <left>
                   <GridPane prefHeight="93.0" prefWidth="175.0" BorderPane.alignment="CENTER">
                     <columnConstraints>
@@ -101,56 +79,124 @@
                      </children>
                   </HBox>
                </right>
+               <top>
+                  <AnchorPane prefHeight="29.0" prefWidth="1280.0" style="-fx-background-color: #1E90FF;" BorderPane.alignment="CENTER" />
+               </top>
             </BorderPane>
          </top>
          <left>
             <VBox prefHeight="439.0" prefWidth="220.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#openSaleManage" prefHeight="37.0" prefWidth="220.0" text="Sales Manage">
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openSaleManage" prefHeight="61.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Sales Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openCreateOrder" prefHeight="33.0" prefWidth="220.0" text="Create Order" />
-                  <Button mnemonicParsing="false" onAction="#openCustomerList" prefHeight="34.0" prefWidth="220.0" text="Customer List" />
-                  <Button mnemonicParsing="false" onAction="#openCommission" prefHeight="35.0" prefWidth="220.0" text="Commission Manage" />
-                  <Button mnemonicParsing="false" onAction="#openGroupProduct" prefHeight="40.0" prefWidth="220.0" text="Group Produt Manage" />
-                  <Button mnemonicParsing="false" onAction="#openPayment" prefHeight="35.0" prefWidth="220.0" text="Payment Manage">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/png-clipart-computer-icons-profit-chart-business-income-angle-text.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openPayment" prefHeight="35.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Payment Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openCustomerStatis" prefHeight="36.0" prefWidth="220.0" text="Customer Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="29.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/img_122068.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                   <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openCustomersManage" prefHeight="45.0" prefWidth="272.0" styleClass="btn" stylesheets="@../style.css" text="Customers Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openSaleStatistic" prefHeight="38.0" prefWidth="228.0" text="Sales Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="29.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/customer-segment-1792155-1522474.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openTradeDiscountManage" prefHeight="41.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Trade Discount Manage">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openProductGroupStatistic" prefHeight="38.0" prefWidth="220.0" text="Product Group Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="76.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../../Photo/discount-ribbon-tag-label-sale-shop-shopping-1-24561.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openCustomerStatis" prefHeight="36.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Customer Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openProductSaleStatis" prefHeight="39.0" prefWidth="232.0" text="Product Sale Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="29.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/statistics-1472335-1245759.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openSaleStatistic" prefHeight="38.0" prefWidth="228.0" styleClass="btn" stylesheets="@../style.css" text="Sales Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openTradeDiscountStatis" prefHeight="35.0" prefWidth="220.0" text="Trade Discount Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/unnamed%20(2).png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openProductGroupStatistic" prefHeight="38.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Product Group Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openCustomerTradeDiscountStatis" prefHeight="34.0" prefWidth="220.0" text="Customer Trade Discount Statistic">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="35.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/GRoup.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openProductSaleStatis" prefHeight="39.0" prefWidth="232.0" styleClass="btn" stylesheets="@../style.css" text="Product Sale Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                   <Button mnemonicParsing="false" onAction="#openCustomersManage" prefHeight="45.0" prefWidth="272.0" text="Customers Manage">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/5-512.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openTradeDiscountStatis" prefHeight="35.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Trade Discount Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openTradeDiscountManage" prefHeight="41.0" prefWidth="220.0" text="Trade Discount Manage">
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/265741.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openCustomerTradeDiscountStatis" prefHeight="34.0" prefWidth="220.0" styleClass="btn" stylesheets="@../style.css" text="Customer Trade Discount Statistic">
                      <font>
                         <Font name="System Bold" size="12.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="223.0" text="Button" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Photo/1376086-png-svg-profile-png-512_512_preview.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                </children>
             </VBox>
          </left>
