--- a/src/main/resources/Form/style.css
+++ b/src/main/resources/Form/style.css
@@ -22,3 +22,9 @@
 .componentColor{
     -fx-background-color: blue;
 }
+.btn{
+    -fx-background-color: #1E90FF;
+    -fx-text-fill: white;
+    -fx-border-color: whitesmoke;
+    -fx-border-radius: 2px;
+}
